compiler/tests/snapshots/cli_check__check_reassign_is_valid.snap
---
source: tests/cli_check.rs
expression: snapshot_view(&result)
---
status: 0
--- stdout ---
No errors found in <MANIFEST_DIR>/tests/programs/reassign_ok.mj
--- stderr ---
