compiler/tests/snapshots/cli_check__check_unreachable_after_if_returns.snap
---
source: tests/cli_check.rs
expression: snapshot_view(&result)
---
status: 1
--- stdout ---
--- stderr ---
types::unreachable_code

  × Unreachable code
   ╭─[unreachable_after_if_returns.mj:8:3]
 7 │ 
 8 │   x = 10
   ·   ───┬──
   ·      ╰── this statement is unreachable
 9 │ end
   ╰────
